[project]
name = "fetch-ssh-keys"
version = "0.1.0"
description = "Fetch SSH public keys from providers and print them in authorized_keys format."
authors = [
    { name = "Mathieu Chataigner" }
]
requires-python = ">=3.7"
readme = "README-homebrew.md"
license = { file = "LICENSE" }

[tool.uv]
# uv-specific configuration can be added here if needed
