[project]
name = "fetch-ssh-keys"
version = "0.1.0"
description = "Fetch SSH public keys from providers and print them in authorized_keys format."
authors = [
    { name = "Mathieu Chataigner" }
]
requires-python = ">=3.7"
license = { file = "LICENSE" }

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
# uv-specific configuration can be added here if needed

[project.scripts]
fetch-ssh-keys = "fetch_ssh_keys:main"
